<resources>
    <string name="app_name">Typing Challenge</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign in</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="registration_page">Registration Page</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_page">Login Page</string>
</resources>